# micrograd

./: .gitignore  .pre-commit-config.yaml  Agent.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.bat  build.py  build.sh  cpu_kernel.cpp  kernel_roadmap.md  main.py  makefile  pyproject.toml  requirements.txt  roadmap.md  run.sh  run_cpp_tests.sh  setup.py  setup_prerequisite.bat  setup_prerequisite.sh  test_buffer_add.py  vecbuffer.cpp  vecbuffer.h
.zed/: settings.json
benchmarks/: bench_after.txt  bench_before.txt  benchmark_simd_unroll_binary_kernel.py  binary_kernel_benchmark.py
examples/: README.md  basic_operations.py  buffer_example.py
grad/: __init__.py  buffer.py  buffer_old.py  depreceated_buffer.py  device.py  dtype.py  ops.py  tensor.py
grad/autograd/: function.py  ops.py
grad/kernels/: __init__.py
grad/ops/: __init__.py  elementwise.py
grad/utils/: constants.py  fp16.py  misc.py
kernels/: .clangd  README.md  cpu_kernel.bkp.cpp  cpu_kernel.bkp.h  cpu_kernel.cpp  cpu_kernel.h  operations.cpp  operations.h  vecbuffer.cpp  vecbuffer.h
tests/: binary_ops_test.py  conftest.py  mathops_test.py  ops_test.py  tensor-test.py  tensor_test.py  test_buffer.py  test_fp16.py  test_tensor_addition.py  unary_ops_test.py
tests/kernel_test/: test_cpu_kernel.cpp  test_vecbuffer.cpp
tests/kernels/: .clangd  CMakeLists.txt  test_alignment.cpp  test_binary_operations.cpp  test_binary_ops.cpp  test_buffer_elementwise.cpp  test_buffer_members.cpp  test_cpu_kernel 2.cpp  test_cpu_kernel.cpp  test_cpu_kernel.py  test_dtype_enum.cpp  test_elementwise_add.cpp  test_operations.cpp  test_vecbuffer.cpp  test_vecbuffer_arithmetic.cpp
